--- a/assets/index.html
+++ b/assets/index.html
@@ -3,18 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hari Portfolio</title>
+    <title>Hariswaran Portfolio</title>
     <!--Styling CSS-->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div>
-      <h1>This is my wonderfull portfolio!</h1>
-      <p class="paraOne">
-        this is my para,
-        <a id="anchor" href="about .html">click here! more info</a>
-      </p>
-    </div>
-    <p>another para in the lesson&</p>
+    <header>
+      <div>
+        <a class="name" href="index.html"
+          ><span class="logo">HARISWARAN</span></a
+        >
+      </div>
+      <div>
+        <ul>
+          <li>
+            <a href="./index.html">Home</a>
+          </li>
+          <li>
+            <a href="./about .html">About</a>
+          </li>
+          <li>
+            <a href="./contacts.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <button>DOWNLOAD CV</button>
+      </div>
+    </header>
   </body>
 </html>
