--- a/assets/contacts.html
+++ b/assets/contacts.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Page</title>
+    <title>Contact Page</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>About Page!!!</h1>
+    <h1>Contact Page!!!</h1>
   </body>
 </html>
